Auto suggest using typeahead+bloodhound accent folding so special characters will be recognized footer no longer overlaps content forgot corsfilter class file in last commit.

--- a/web/stylesheet.css
+++ b/web/stylesheet.css
@@ -1,6 +1,32 @@
-footer {
-  position: fixed;
+html,
+body {
+  height: 100%;
+}
+#wrap {
+  min-height: 100%;
+}
+#main {
+  overflow: auto;
+  padding-bottom: 100px;
+}
+
+/* must be same height as the footer */
+
+#footer {
+  position: relative;
+  margin-top: -100px;
+  /* negative value of footer height */
   height: 100px;
-  bottom: 0;
-  width: 100%;
+  clear: both;
+}
+
+/*Opera Fix*/
+
+body:before {
+  content: "";
+  height: 100%;
+  float: left;
+  width: 0;
+  margin-top: -32767px;
+  /
 }
